--- a/index.html
+++ b/index.html
@@ -75,26 +75,36 @@
         <!-- check in -->
         <div class="row checkInRow">
             <div class="offset-2 col-8 d-flex justify-content-center">
-                <form>
+                <form id="formCheckIn">
                     <div class="form-group">
                         <label for="formGroup">Nombre del grupo</label>
-                        <input type="text" class="form-control" id="formGroupNameInputCheckIn" placeholder="Nombre">
+                        <input type="text" class="form-control list-group-item-dark" id="formNameInputCheckIn"
+                            placeholder="Nombre">
                     </div>
                     <div class="form-group">
-                        <label for="formGroup">Número de personas</label>
-                        <input type="text" class="form-control" id="formGroupNumberInputCheckIn" placeholder="Personas">
+                        <label for="formGroup">Número de adultos</label>
+                        <input type="text" class="form-control list-group-item-dark" id="formAdultsInputCheckIn"
+                            placeholder="Adultos">
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroup">Número de niños (menos de 15 años)</label>
+                        <input type="text" class="form-control list-group-item-dark" id="formChildsInputCheckIn"
+                            placeholder="Niños">
                     </div>
                     <div class="form-group">
                         <label for="formGroup">Número de noches</label>
-                        <input type="number" class="form-control" id="formGroupNightsInputCheckIn" placeholder="Noches">
+                        <input type="text" class="form-control list-group-item-dark" id="formNightsInputCheckIn"
+                            placeholder="Noches">
                     </div>
                     <div class="form-group">
-                        <label for="formGroup">DNI del responsable del grupo</label>
-                        <input type="password" class="form-control" id="formGroupDniInputCheckIn" placeholder="DNI">
+                        <label for="formGroup">DNI / Pasaporte</label>
+                        <input type="text" class="form-control list-group-item-dark" id="formDniInputCheckIn"
+                            placeholder="DNI / Pasaporte">
                     </div>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-dark mt-3">Check In</button>
                     </div>
+                    <div id="resultPrintCheckIn"></div>
                 </form>
             </div>
         </div>
@@ -137,6 +147,7 @@
 
     </div>
 
+    <script src="index.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
