--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                         <button type="submit" class="btn btn-dark mt-3">Check In</button>
                     </div>
                     <div id="resultPrintCheckIn"></div>
+                    <div id="resultPrintPrice"></div>
                 </form>
             </div>
         </div>
